# mellowmesh

./: .gitignore  CONTRIBUTING.md  Cargo.toml  DESIGN.md  LICENSE  PRODUCT_PLAN.md  README.md  package-deb.sh  package-dmg.sh  package-msi.ps1
.github/workflows/: ci.yml  release.yml
branding/: brand_kit.md
crates/mellowmesh-bench/: Cargo.toml
crates/mellowmesh-bench/src/: main.rs
crates/mellowmesh-cli/: Cargo.toml
crates/mellowmesh-cli/src/: commands.rs  main.rs  mcp.rs
crates/mellowmesh-client/: Cargo.toml
crates/mellowmesh-client/examples/: mention_routing.rs  multi_agent_discussion.rs  schema_validation.rs  topic_subscription.rs
crates/mellowmesh-client/src/: autostart.rs  lib.rs  mcp.rs
crates/mellowmesh-client/tests/: e2e_no_header_leak.rs
crates/mellowmesh-connectors/: Cargo.toml
crates/mellowmesh-connectors/src/: lib.rs
crates/mellowmesh-core/: Cargo.toml
crates/mellowmesh-core/src/: agent.rs  auth.rs  decision.rs  e2e.rs  hot_buffer.rs  identity.rs  lib.rs  mentions.rs  message.rs  okf.rs  persistence.rs  priority.rs  relay.rs  task.rs  telemetry.rs  topic.rs
crates/mellowmesh-daemon/: Cargo.toml
crates/mellowmesh-daemon/src/: auth.rs  lib.rs  main.rs  metrics.rs  notify.rs  peer.rs  pipeline.rs  relay_link.rs  server.rs  state.rs  subscription.rs  sweeper.rs  trace_mgr.rs  ui.html  wiki_sync.rs
crates/mellowmesh-daemon/src/handlers/: agent.rs  decision.rs  e2e.rs  identity.rs  mcp.rs  message.rs  metrics.rs  mod.rs  named_topic.rs  schema.rs  summary.rs  task.rs  trace.rs  wiki.rs
crates/mellowmesh-relay/: Cargo.toml
crates/mellowmesh-relay/src/: lib.rs  main.rs
crates/mellowmesh-relay/tests/: forwarding.rs
crates/mellowmesh-store/: Cargo.toml
crates/mellowmesh-store/src/: agent_store.rs  auth_store.rs  decision_store.rs  identity_store.rs  lib.rs  message_store.rs  named_topic_store.rs  persistence_impl.rs  sqlite.rs  task_store.rs  wiki_store.rs
crates/mellowmesh-wasm/: Cargo.toml  README.md  index.d.ts  index.js  package.json
crates/mellowmesh-wasm/examples/: demo.js  index.html
crates/mellowmesh-wasm/src/: lib.rs
crates/mellowmesh-wasm/tests/: browser_comm.js  coordination.rs
data-model/: mellowmesh_data_model.md
debian/: mellowmesh.service
docs/: api.md  cli.md  configuration.md  connectors.md  governance.md  installation.md  mcp.md  performance.md  relay.md  security.md  troubleshooting.md
examples/llmwiki/: README.md  run_demo.ps1  run_demo.sh
examples/llmwiki/agents/: consensus.md  index.md  memory.md  multi_agent.md  planning.md  rag.md
examples/llmwiki/onepiece/: index.md  logia.md  nika.md  paramecia.md  zoan.md
examples/llmwiki/quantum/: bosons.md  fermions.md  higgs.md  index.md  leptons.md  quarks.md
presentation/: .gitignore  index.html  meta.json  package.json  skills-lock.json
skills/mellowmesh/: SKILL.md
wiki/: index.md
wiki/procedures/: db_rotation.md
wiki/runbooks/: deploy.md
wix/: path_env.wxs
