[package]
name = "mellowmesh-client"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mellowmesh-core = { path = "../mellowmesh-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1.38", features = ["full"] }
tokio-tungstenite = "0.21"
futures-util = "0.3"
url = "2.5"
thiserror = "1.0"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
