[package]
name = "mellowmesh-connectors"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mellowmesh-core = { path = "../mellowmesh-core" }
mellowmesh-store = { path = "../mellowmesh-store" }
mellowmesh-client = { path = "../mellowmesh-client" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
anyhow = "1.0"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
axum = { version = "0.7" }
futures-util = "0.3"
async-trait = "0.1"
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"
tower = { version = "0.4", features = ["util"] }
