[package]
name = "mellowmesh-core"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ulid = { version = "1.1", features = ["serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
futures-util = "0.3"
anyhow = "1.0"




