[package]
name = "mellowmesh-store"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
mellowmesh-core = { path = "../mellowmesh-core" }
rusqlite = { version = "0.31", features = ["bundled", "chrono"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
directories = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"
async-trait = "0.1"
futures-util = "0.3"
tokio = { version = "1.38", features = ["full"] }

