[package]
name = "mellowmesh-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WebAssembly bindings for MellowMesh core coordination fabric"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
mellowmesh-core = { path = "../mellowmesh-core" }
wasm-bindgen = "0.2.92"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde", "wasmbind"] }
js-sys = "0.3.69"
web-sys = { version = "0.3.69", features = [
    "console",
    "BroadcastChannel",
    "MessageEvent"
] }
console_error_panic_hook = "0.1.7"
anyhow = "1.0"
ulid = { version = "1.1", features = ["serde"] }
getrandom = { version = "0.3", features = ["wasm_js"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.42"
